<resources>
    <string name="app_name">LocationTest</string>
    <string name="action_settings">Settings</string>
    <string name="location_source">Location Source</string>
    <string name="add_poi">Add POI</string>
    <string name="location_source_empty_message">No Place available.\nLets start by adding few places</string>
    <string name="search_places">Search Places</string>
    <string name="search_place">Search Place</string>
    <string name="google_api_key">AIzaSyBSNyp6GQnnKlrMr7hD2HGiyF365tFlK5U</string>
    <string name="search_hint">Eg vastrapur</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="location_confirm_message">Do you want to save this selected location?</string>
    <string name="primary">Primary</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_distance_ascending">Sort distance in ascending order</string>
    <string name="sort_distance_descending">Sort distance in descending order</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="delete_saved_place">Delete Saved Place</string>
    <string name="delete_saved_place_message">Are you sure you want to delete this place details from saved list?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="route">Route</string>
    <string name="generation_route_information">Generating Route Information</string>
    <string name="please_wait">Please Wait...</string>
</resources>