<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <RadioButton
            android:id="@+id/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sort_distance_ascending" />

        <RadioButton
            android:id="@+id/descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_distance_descending" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textSize="18sp"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/apply"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>